--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -122,3 +122,13 @@
     color: #e7fbe3;
     text-decoration: none;
 }
+@media(max-width:700px) {
+    .header h1 {
+        text-align: center;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+    }
+}
